--- a/index.html
+++ b/index.html
@@ -18,23 +18,7 @@
     <!-- <img src="images/museum.jpg" alt="placeholder"> -->
     <picture>
 
-      <!-- square -->
-      <source srcset="images/museum-800_x_800.jpg,
-                      images/museum-1600_x_1600.jpg 2x,
-                      images/museum-2400_x_2399.jpg 3x" media="(min-width: 1600px)">
-
-      <source srcset="images/museum-640_x_640.jpg,
-                      images/museum-1280_x_1280.jpg 2x,
-                      images/museum-1920_x_1920.jpg 3x" media="(min-width: 1280px)">
-
-      <source srcset="images/museum-480_x_480.jpg,
-                      images/museum-960_x_960.jpg 2x,
-                      images/museum-1440_x_1440.jpg 3x" media="(min-width: 960px)">
-
-      <source srcset="images/museum-720_x_405.jpg,
-                      images/museum-1440_x_810.jpg 2x,
-                      images/museum-2160_x_1215.jpg 3x" media="(min-width: 720px)">
-      <!-- landscape -->
+      <!-- landscape: smaller screen -->
       <source srcset="images/museum-320_x_180.jpg,
                       images/museum-640_x_360.jpg 2x,
                       images/museum-960_x_540.jpg 3x" media="(max-width: 319px)">
@@ -50,6 +34,24 @@
       <source srcset="images/museum-960_x_960.jpg,
                       images/museum-1920_x_1920.jpg 2x,
                       images/museum-2880_x_1621.jpg 3x" media="(max-width: 959px)">
+
+      <!-- square: larger screen -->
+      <source srcset="images/museum-800_x_800.jpg,
+                      images/museum-1600_x_1600.jpg 2x,
+                      images/museum-2400_x_2399.jpg 3x" media="(min-width: 1600px)">
+
+      <source srcset="images/museum-640_x_640.jpg,
+                      images/museum-1280_x_1280.jpg 2x,
+                      images/museum-1920_x_1920.jpg 3x" media="(min-width: 1280px)">
+
+      <source srcset="images/museum-480_x_480.jpg,
+                      images/museum-960_x_960.jpg 2x,
+                      images/museum-1440_x_1440.jpg 3x" media="(min-width: 960px)">
+
+      <source srcset="images/museum-720_x_405.jpg,
+                      images/museum-1440_x_810.jpg 2x,
+                      images/museum-2160_x_1215.jpg 3x" media="(min-width: 720px)">
+
 
       <img src="images/museum-960_x_540.jpg" alt="inside a museum">
     </picture>
